# h2s

./: README.md  pyproject.toml
sample_try/: main.ipynb
sample_try/.ipynb_checkpoints/: main-checkpoint.ipynb
src/: main.py
utils/: enum.py  jd_extractor.py  schema.py  schema_validator.py
